# SEHS4696-Tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
IA/: IA LgReg-Cancer-Template v24.py  IA breast cancer v2d.csv  IA breast cancer v2d_b.csv  IA breast cancer v2d_g.csv  IA.ipynb  IA.py
T01/: T01.ipynb
T03/: KNN example.ipynb  T03 KNN, 1000_Telcom_CustomerS_v24.ipynb  T03.ipynb
T04/: California Housing.csv  T04 - Multi_LR_California_read_csv,_seaborn complete code.py  T04.ipynb  T04.py
T05/: LgReg-Cancer-ALL-Features-Conf-Matrix-predict.py  LgReg-Cancer-OneFeature.py  T05 print mod 3 using while - TEMPLATE.py  T05.py  all.ipynb  one.ipynb
T06/: T06 K-Means, BMX_G TEMPLATE.py  T06.py
T07/: Poly LR Lee 2019 Ch6.py  T07.ipynb  T07.py
T08/: T08.ipynb
T09/: T09 -Cross-Validation -Template v24.py  T09.ipynb
T10/: T10 DT.ipynb  T10 RF.ipynb  T10 entropy.ipynb
matplot_tut/: tut1.py
numpy_tut/: t1.ipynb  t2.ipynb  t3.ipynb  t4.ipynb  t5.ipynb  t6.ipynb
pandas_tut/: t1.ipynb  t2.ipynb  test.py
scikit-learn_tut/: t1.ipynb  t2.ipynb
