[tool.poetry]
name = "test-ml"
version = "0.1.0"
description = ""
authors = ["andrewfung729 <official@waiki.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
jupytext = "^1.16.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
